--- a/Spider/CMakeLists.txt
+++ b/Spider/CMakeLists.txt
@@ -5,6 +5,8 @@ add_subdirectory(C:/Users/kisa7/libpqxx-7.9.1 libpqxx-build)
 target_compile_features(Spider PRIVATE cxx_std_17)
 target_link_libraries(Spider pqxx)
 target_link_libraries(Spider OpenSSL::SSL)
+#set(BOOST_ROOT "C:/Programming/Diplom/Spider/Boost")
+#set(BOOST_ROOT "C:/Programming/Diplom/Spider/Boost/stage/lib/")
 set (LIBXML2_ROOT "C:/Programming/Diplom/Spider/vcpkg/packages/libxml2_x64-windows/include/libxml2")
 find_package(OpenSSL REQUIRED)
 find_package(Boost 1.85.0 REQUIRED)
