--- a/Spider/data.ini
+++ b/Spider/data.ini
@@ -3,6 +3,6 @@ port=5432
 dbname=Diplom
 user=postgres
 password=Tanusha7392
-startpage=https://en.wikipedia.org/wiki/Wikipedia
-depth=2
-searchport=443
+startpage=https://wiki.openssl.org/index.php/Main_Page
+depth=3
+searchport=8080
